--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-aspects</artifactId>
+			<artifactId>spring-aop</artifactId>
 		</dependency>
 
 		<dependency>
